# Copyright © Jordan Singh 2022

[package]
name = "vgrid"
version = "0.2.0"
edition = "2021"
build = "build.rs"

[build-dependencies]
winres = "0.1.12"

[dependencies.windows-sys]
version = "0.59.0"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dwm",
    "Win32_UI_Shell",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_LibraryLoader"
]